--- a/package.json
+++ b/package.json
@@ -1,21 +1,17 @@
 {
-  "name": "fastify",
-  "version": "1.0.0",
-  "main": "index.js",
-  "author": "Faraz Patankar",
-  "license": "MIT",
+  "private": true,
   "scripts": {
     "dev": "nodemon index.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js"
   },
   "dependencies": {
-    "fastify": "^3.15.1"
+    "fastify": "^3.18.0"
   },
   "devDependencies": {
-    "@types/node": "^15.6.1",
+    "@types/node": "^15.12.5",
     "nodemon": "^2.0.7",
     "ts-node": "^10.0.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.3.4"
   }
 }
